Intégration des variables et fichiers de base pour le Sass

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;700&display=swap" rel="stylesheet">
+
+
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
+
+
 <body>
 
+<header>
+    <div class="wrapper">
+    <img src="images/svg/logo.svg">
+    <h2>Louis Lajoie</h2>
+    <ul>
+        <li><a>Accueil</a></li>
+        <li><a>À propos</a></li>
+        <li><a>Réalisations</a></li>
+        <li><a>Contact</a></li>
+    </ul>
+    </div>
+</header>
+
+<section class="hero">
+
+    <div class="wrapper">
+
+<h4>Intégrateur web</h4>
+<h1>Louis Lajoie</h1>
+<p>Vous cherche un spécialiste en développement web, en animation de page web et en référencement, vous l’avez trouvé!</p>
+<button><a>Voir mes réalisations</a></button>
+        <img src="images/louis-lajoie.png">
+
+    </div>
+
+</section>
+
+<section class="creations">
+
+    <div class="wrapper">
+        <article>
+            <img src="images/svg/Desktop.svg">
+            <h3>Création de sites web</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, ut!</p>
+        </article>
+
+        <article>
+            <img src="images/svg/cogs.svg">
+            <h3>Conception graphique</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum deserunt enim inventore laboriosam praesentium quos reprehenderit soluta voluptatibus.</p>
+        </article>
+
+        <article>
+            <img src="images/svg/camera.svg">
+            <h3>Photographie</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis incidunt minus sequi totam. Autem!</p>
+        </article>
+
+        <article>
+            <img src="images/svg/stats-dots.svg">
+            <h3>Référencement</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dicta fugiat magni qui.</p>
+        </article>
+
+        <article>
+        <img src="images/svg/share.svg">
+        <h3>Médias sociaux</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate itaque odio optio porro vitae? Provident, quam?</p>
+    </article>
+
+        <article>
+            <img src="images/svg/pencil.svg">
+            <h3>Illustrations</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo?</p>
+        </article>
+    </div>
+
+</section>
+
+<footer>
+    <div class="wrapper">
+        <p>Expert TIM ©. Les icônes sont récupérés sur le site icomoon.io</p>
+    </div>
+</footer>
+
 </body>
+
+
 </html>
