--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio Louis Lajoie</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;700&display=swap" rel="stylesheet">
@@ -16,72 +16,93 @@
 
 <body>
 
-<header>
-    <div class="wrapper">
-    <img src="images/svg/logo.svg">
-    <h2>Louis Lajoie</h2>
-    <ul>
-        <li><a>Accueil</a></li>
-        <li><a>À propos</a></li>
-        <li><a>Réalisations</a></li>
-        <li><a>Contact</a></li>
-    </ul>
+<header class="header-page">
+    <div class="wrapper flex">
+        <div class="logo">
+            <h2>
+                <img src="images/svg/logo.svg" alt="Logo de Louis Lajoie">
+                Louis Lajoie
+            </h2>
+        </div>
+
+        <nav class="nav-princ">
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="a_propos.html">À propos</a></li>
+                <li><a href="realisation.html">Réalisations</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </div>
 </header>
 
+
+
 <section class="hero">
 
-    <div class="wrapper">
-
-<h4>Intégrateur web</h4>
-<h1>Louis Lajoie</h1>
-<p>Vous cherche un spécialiste en développement web, en animation de page web et en référencement, vous l’avez trouvé!</p>
-<button><a>Voir mes réalisations</a></button>
-        <img src="images/louis-lajoie.png">
+    <div class="wrapper flex">
+        <div>
+            <h4>Intégrateur web</h4>
+            <h1>Louis Lajoie</h1>
+            <p>Vous cherche un spécialiste en développement web, en animation de page web et en référencement, vous l’avez trouvé!</p>
+            <a href="#" class="btn btn-medium">Voir mes réalisations</a>
+        </div>
+        <img class="photo" src="images/louis-lajoie.png" alt="Photo de Louis Lajoie">
 
     </div>
 
 </section>
 
-<section class="creations">
+<section class="wrapper creations">
 
-    <div class="wrapper">
         <article>
-            <img src="images/svg/Desktop.svg">
+            <header>
+            <img src="images/svg/Desktop.svg" alt="">
+            </header>
             <h3>Création de sites web</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, ut!</p>
         </article>
 
         <article>
+            <header>
             <img src="images/svg/cogs.svg">
+            </header>
             <h3>Conception graphique</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum deserunt enim inventore laboriosam praesentium quos reprehenderit soluta voluptatibus.</p>
         </article>
 
         <article>
+            <header>
             <img src="images/svg/camera.svg">
+                </header>
             <h3>Photographie</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis incidunt minus sequi totam. Autem!</p>
         </article>
 
         <article>
+            <header>
             <img src="images/svg/stats-dots.svg">
+                </header>
             <h3>Référencement</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dicta fugiat magni qui.</p>
         </article>
 
         <article>
+            <header>
         <img src="images/svg/share.svg">
+                </header>
         <h3>Médias sociaux</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate itaque odio optio porro vitae? Provident, quam?</p>
     </article>
 
         <article>
+            <header>
             <img src="images/svg/pencil.svg">
+                </header>
             <h3>Illustrations</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo?</p>
         </article>
-    </div>
+
 
 </section>
 
